@@ -1,0 +1,39 @@
+# Copyright 2020-2022 Free Software Foundation, Inc.
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+# Test the set/show suppress-cli-notifications command.
+
+standard_testfile
+
+if {[prepare_for_testing "failed to prepare" ${binfile} ${srcfile}]} {
+    return
+}
+
+if {![runto_main]} {
+    return
+}
+
+gdb_test "inferior 1" ".*Switching to inferior 1 .* to thread 1 .*" \
+    "inferior switch is not suppressed"
+
+gdb_test_no_output "set suppress-cli-notifications on"
+gdb_test_no_output "inferior 1" "inferior switch is suppressed"
+gdb_test_no_output "next" "stepping is suppressed"
+
+# Now check that suppression can be turned back off.
+gdb_test_no_output "set suppress-cli-notifications off"
+gdb_test "inferior 1" ".*Switching to inferior 1 .* to thread 1 .*" \
+    "inferior switch is not suppressed again"
+gdb_test "next" "return 0;" "stepping is not suppressed"
