@@ -1,6 +1,18 @@
 		What has changed in GDB?
 	     (Organized release by release)
 
+*** Changes since GDB 11
+
+* New commands
+
+set suppress-cli-notifications (on|off)
+show suppress-cli-notifications
+  This controls whether printing the notifications is suppressed for CLI.
+  CLI notifications occur when you change the selected context
+  (i.e., the current inferior, thread and/or the frame), or when
+  the program being debugged stops (e.g., because of hitting a
+  breakpoint, completing source-stepping, an interrupt, etc.).
+
 *** Changes in GDB 11
 
 * The 'set disassembler-options' command now supports specifying options
